# Data_Base_Project

./: README.md  pyproject.toml
src/: BDM_class.py  func.py  main.py  queries.sql
tests/: func_test.py
